--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,5 +1,5 @@
 //@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;500&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&display=swap");
 
 $sidebar-color: #231b2e;
 $hover-color: #423a4a;
@@ -19,12 +19,27 @@ $font-primary: "Inter", sans-serif;
   padding: 0;
   margin: 0;
 }
+
+.App {
+  background-color: $primary-color;
+}
 .container {
   padding-left: 250px;
   min-height: 100vh;
   width: 100%;
-  max-width: 1200px;
-  // background-color: $primary-color;
+}
+
+.line-2 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+.line-1 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
 }
 // ====== aside =====
 
@@ -121,6 +136,7 @@ $font-primary: "Inter", sans-serif;
   top: 0;
   left: 250px;
   width: 100%;
+  max-width: 1200px;
   padding: 0 60px;
   z-index: 100;
   min-width: 660px;
@@ -179,7 +195,7 @@ $font-primary: "Inter", sans-serif;
   &__right {
     margin-left: 10px;
     display: flex;
-    
+
     &-dowload {
       width: 200px;
       height: 40px;
@@ -190,23 +206,26 @@ $font-primary: "Inter", sans-serif;
       text-align: center;
       align-content: center;
       justify-content: center;
-      i , p { 
+      i,
+      p {
         display: block;
-        color:$border-color;
+        color: $border-color;
         font-weight: 600;
       }
-      i{
+      i {
         font-size: 1.2em;
         margin-right: 10px;
-      };
-      p{
+      }
+      p {
         margin-top: 2px;
         font-size: 0.85em;
         font-weight: bold;
       }
-    };
+    }
 
-    &-premium, &-setting, &-avata{
+    &-premium,
+    &-setting,
+    &-avata {
       margin-left: 10px;
       background-color: $hover-color;
       width: 40px;
@@ -217,5 +236,164 @@ $font-primary: "Inter", sans-serif;
       align-items: center;
       color: $text-title-color;
     }
+  }
+}
+
+// =============== content =================
+
+.content {
+  padding: 70px 60px 0px 40px;
+}
+
+.home-page__slider {
+  width: 100%;
+  padding-top: 30px;
+
+  .slider__items {
+    .slider__item {
+      width: 100%;
+      padding: 0px 15px;
+      img {
+        width: 100%;
+        height: 100%;
+        border-radius: 8px;
+      }
+    }
+  }
+}
+
+.home-page__row {
+  margin-top: 50px;
+}
+
+.album-list {
+  &__title {
+    color: $text-title-color;
+    font-weight: 500;
+    font-size: 18px;
+    padding-left: 15px;
+  }
+
+  &__items {
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+// ======== card ========
+
+.album-list__item-small,
+.album-list__item {
+  padding: 5px 15px;
+  img {
+    height: auto;
+    width: 100%;
+    border-radius: 8px;
+  }
+
+  &-name {
+    color: $text-title-color;
+    margin-top: 1em;
+    font-size: 0.8em;
+    font-weight: 600;
+    line-height: 1.6em;
+  }
+}
+
+// card default
+
+.album-list__item {
+  width: 20%;
+
+  &-singer {
+    color: $text-color;
+    margin-top: 5px;
+    font-size: 0.8em;
+  }
+}
+// card small
+.album-list__item-small {
+  width: 16.6666666667%;
+}
+
+// ============ song list ===========
+
+.song-list {
+  &__title {
+    color: $text-title-color;
+    font-weight: 500;
+    font-size: 18px;
+    padding-left: 15px;
+  }
+
+  &__items {
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 5px;
+  }
+
+  &__item {
+    width: 33.33333333%;
+    padding: 10px;
+    overflow: hidden;
+    margin-bottom: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+
+    img {
+      width: 60px;
+      height: 60px;
+      border-radius: 8px;
+    }
+
+    &__content {
+      padding-left: 10px;
+
+      &-name {
+        color: $text-title-color;
+        font-size: 0.9em;
+        line-height: 1.6;
+      }
+
+      &-singer,
+      &-date {
+        color: $text-color;
+        font-size: 0.75em;
+        line-height: 1.4;
+      }
+    }
+
+    &-btn {
+      margin-right: 20px;
+      border-radius: 50%;
+      // background-color: red;
+      padding: 10px;
+      position: absolute;
+      top: 50%;
+      right: 20px;
+      transform: translateY(-50%);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: $primary-color;
+    }
+
+    &-btn:hover {
+      transition: 0.3s;
+      color: $text-title-color;
+      background-color: $text-color;
+    }
+  }
+
+  &__item:hover {
+    background-color: $hover-color;
+    border-radius: 8px;
+    transition: 0.3s;
+  }
+  &__item:hover .song-list__item-btn {
+    color: $text-title-color;
   }
 }
