--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -321,7 +321,6 @@
       @media #{$tablet} {
         margin-left: 15px;
       }
-      
     }
 
     &-premium {
@@ -333,8 +332,6 @@
       }
     }
   }
-
-  
 }
 
 // =============== content =================
@@ -705,13 +702,68 @@
 
 // ======== play music ===========
 
-.play-music{
+.play-music {
   z-index: 1;
-  background-color: red;
-  min-height: 50px;
+  background-color: $primary-color;
   width: 100%;
   color: #fff;
   position: fixed;
   bottom: 0;
   left: 0;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+
+  .play {
+    display: flex;
+    flex-direction: column;
+
+    .button-group {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      .btn-func {
+        margin: 5px 10px;
+        border-radius: 50%;
+        padding: 10px;
+      }
+
+      .btn-play {
+        width: 60px;
+        height: 60px;
+        position: relative;
+        // padding: 20px;
+        
+
+
+
+        .lni {
+          position: absolute;
+          font-size: 2em;
+          display: block;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+
+      .btn-func:hover{
+        background-color: $border-color;
+      }
+    }
+
+    .timeline-group{
+      margin-bottom: 10px;
+      .css-wpz5lw-Slider{
+        width: 400px;
+        margin: 0px 20px 3px 20px;
+      }
+      .css-100juk0{
+        background-color: white;
+        border-radius: 50%;
+
+      }
+    }
+  }
 }
