fix fetch album

--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -3,6 +3,7 @@
 
 $sidebar-color: #231b2e;
 $hover-color: #423a4a;
+$bg-hover-color: #2c1b3bbc;
 $primary-color: #170f23;
 $secondary-color: #33224e;
 $border-color: #c273ed;
@@ -12,6 +13,7 @@ $text-sidebar-color: #dadada;
 $background-yellow: #e2d007;
 $background-gradient: linear-gradient(117deg, #5a4be7, #c86dd7 102%);
 $font-primary: "Inter", sans-serif;
+
 
 $mobile-width: 480px; 
 $tablet-width: 768px; 
