--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -449,6 +449,41 @@
     font-size: 0.8em;
     line-height: 1.6;
   }
+  &:hover {
+    background-color: $hover-color;
+    border-radius: 5px;
+    transition: 0.2s;
+  }
+
+  .album-list__item-img {
+    position: relative;
+    &-bg {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: $bg-hover-color;
+      display: none;
+    }
+    &:hover .album-list__item-img-bg {
+      display: block;
+    }
+    &:hover .album__play-icon {
+      display: block;
+    }
+  }
+}
+
+.album__play-icon {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: $text-title-color;
+  font-size: 2.5rem;
+  z-index: 1;
 }
 
 // card default
@@ -701,6 +736,21 @@
 }
 
 // ======== play music ===========
+
+.img_running {
+  border-radius: 50% !important;
+  animation: rolate360 10s linear infinite;
+}
+
+@keyframes rolate360 {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.play-running-album-content {
+  align-items: center;
+}
 
 .play-music {
   z-index: 1;
