--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -14,6 +14,7 @@ $background-yellow: #e2d007;
 $background-gradient: linear-gradient(117deg, #5a4be7, #c86dd7 102%);
 $font-primary: "Inter", sans-serif;
 
+$font-size: 14px;
 
 $mobile-width: 480px; 
 $tablet-width: 768px; 
