--- a/src/assets/scss/_detail-page.scss
+++ b/src/assets/scss/_detail-page.scss
@@ -86,10 +86,9 @@
                 border-bottom: 1px solid $hover-color;
                 text-transform: uppercase;
                 font-size: 0.9em;
+                padding-left: 0.5em;
+                padding-right: 0.5em;
 
-                // .table-col {
-                //     width: 33.33333%;
-                // }
             }
         }
     }
@@ -100,7 +99,7 @@
     display: flex;
     justify-content: space-around;
     border-bottom: 1px solid $hover-color;
-    padding: 1em 0 0.5em 0;
+    padding: 1em 0.5em 0.5em 0.5em;
     align-items: center;
     &-left {
         display: flex;
@@ -122,6 +121,11 @@
                 margin-bottom: .5em;
             }
         }
+    }
+
+    &:hover{
+        background-color: $hover-color;
+        border-radius:0 0 10px 0;
     }
 }
 
