--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -2,7 +2,7 @@
   aspect-ratio: 1/1;
 }
 
-.float-end{
+.float-end {
   float: right;
 }
 
@@ -31,7 +31,7 @@
   width: 40%;
 }
 
-.col-5{
+.col-5 {
   width: 50%;
 }
 
@@ -39,6 +39,20 @@
   width: 60%;
 }
 
-.cursor-pointer{
+.cursor-pointer {
   cursor: pointer;
+}
+
+.active {
+  color: $border-color;
+}
+
+@keyframes rolate360 {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.rolate {
+  animation: rolate360 10s linear infinite;
 }
