--- a/src/assets/scss/_detail-page.scss
+++ b/src/assets/scss/_detail-page.scss
@@ -3,7 +3,10 @@
     font-size: $font-size;
     display: flex;
     margin-top: 2rem;
-    min-height: 100vh;
+    // min-height: 100vh;
+    position: sticky;
+    top: 0px;
+    left: 0px;
 
     &__infomation{
         width: 33.33333%;
@@ -14,11 +17,13 @@
         
         &__img{
             width: calc(100%);
-            
+            overflow: hidden;
+            border-radius: 8px;
+            position: relative;
             img{
                 width: 100%;
                 height: 100%;
-                border-radius: 8px;
+                // border-radius: 8px;
             }
 
             
@@ -47,16 +52,29 @@
             border-radius: 1.5em;
             font-weight: 300;
 
+            &:hover{
+                cursor: pointer;
+            }
+
             i{
                 margin-right: 1em;
             }
         }
+
 
         &__btn-options .lni{ 
             padding: 0.5em;
             border-radius: 50%;
             background-color: $hover-color;
             margin: 1em 0.5em;
+
+            &:hover{
+                cursor: pointer;
+                background-color: $border-color;
+                color: $text-title-color;
+            }
+
+            
         }
     }
 
