--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -875,4 +875,14 @@
 
 }
 
+.banner-top{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  svg{
+    
+  }
+}
+
 
