--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -192,7 +192,7 @@
   top: 0;
   left: 250px;
   width: 100%;
-  max-width: 1200px;
+  max-width: 100%;
   padding: 0 60px;
   z-index: 100;
   min-width: 660px;
@@ -887,3 +887,53 @@
 }
 
 
+.login-page {
+  color: $text-color;
+
+
+  .login-form {
+    h3 {
+      color: white;
+      text-transform: uppercase;
+      text-align: center;
+      margin-bottom: 2em;
+      font-size: 1.5em;
+    }
+    width: 600px;
+    padding: 3em;
+    background-color: #231b2e;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    input {
+      padding: 0.5em 1.5em;
+      width: 100%;
+      background-color: $hover-color;
+      color: $border-color;
+      border: none;
+      border-radius: 20px;
+      height: 40px;
+      margin: 1em 0;
+    }
+  }
+  .button {
+    margin-top: 2em;
+    color:  white;
+    background-color: $border-color;
+    padding: 1em;
+    border-radius: 20px;
+    height: 40px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+  }
+
+  .text-mini {
+    text-align: center;
+    margin-top: 2em;
+    a {
+      color: white;
+    }
+  }
+}
